fix styling issue on firefox, remove corner-flag that wasn't used

--- a/app/assets/stylesheets/_posts.css.scss
+++ b/app/assets/stylesheets/_posts.css.scss
@@ -52,9 +52,6 @@ li.media {
     display: block;
   }
   li.media {
-    .corner-flag {
-			position: absolute;
-		}
     padding: 0;
 		padding: 20px;
     margin: 0;
